# osfig

./: .gitignore  CHANGELOG  Cargo.toml  README.MD  RELEASE_PROCESS  sbom.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
documentation/: Glob Patterns  Usage Instructions  Usage Instructions (osfig_settings.json)  Usage Instructions (results-###.json)
src/: file.rs  hashing.rs  helpers.rs  logging.rs  main.rs  osfig_state.rs  registry.rs  scan_settings.rs  tests.rs  win_acl.rs  win_helpers.rs
